--- a/src/app/Module/weather/page/weather-home/weather-home.component.html
+++ b/src/app/Module/weather/page/weather-home/weather-home.component.html
@@ -19,4 +19,4 @@
 
 </div>
 
-<app-weather-card></app-weather-card>
+<app-weather-card *ngIf="weatherDatas" [WeatherDatasInput]="weatherDatas"></app-weather-card>
