--- a/src/app/Module/weather/components/weather-card/weather-card.component.html
+++ b/src/app/Module/weather/components/weather-card/weather-card.component.html
@@ -1,1 +1,58 @@
-<p>weather-card works!</p>
+<div class="container" *ngIf="WeatherDatasInput">
+    <div class="upper-data">
+        <img src="../../../../../assets/sun.jpg" alt="sun"
+        *ngIf="WeatherDatasInput.main.temp > 15" />
+        <img src="../../../../../assets/cold1.jpg" alt="cold1" 
+        *ngIf="WeatherDatasInput.main.temp <= 15"/>
+        <div class="weather-data">
+            <div class="location">
+                {{WeatherDatasInput.name}}
+            </div>
+            <div class="temperature">
+                {{WeatherDatasInput.main.temp | number:"1.0-0"}}°C
+            </div>
+        </div>
+    </div>
+
+    <div class="lower-data">
+        <div class="more-info-label">Mais Informações</div>
+        <div class="more-info-container">
+            <div class="info-block">
+                <div class="info-block-label">
+                    <fa-icon size="lg" [icon]="minTemperatureIcon"></fa-icon>
+                    <span>Mínima</span>
+                </div>
+                <div class="info-block-value">
+                    {{WeatherDatasInput.main.temp_min| number:"1.0-0"}}°C
+                </div>
+            </div>
+            <div class="info-block">
+                <div class="info-block-label">
+                    <fa-icon size="lg" [icon]="maxTemperareIcon"></fa-icon>
+                    <span>Máxima</span>
+                </div>
+                <div class="info-block-value">
+                    {{WeatherDatasInput.main.temp_max | number:"1.0-0"}}°C
+                </div>
+            </div>
+            <div class="info-block">
+                <div class="info-block-label">
+                    <fa-icon size="lg" [icon]="humidityIcon"></fa-icon>
+                    <span>Humidade</span>
+                </div>
+                <div class="info-block-value">
+                    {{WeatherDatasInput.main.humidity}} %
+                </div>
+            </div>
+            <div class="info-block">
+                <div class="info-block-label">
+                    <fa-icon size="lg" [icon]="windIcon"></fa-icon>
+                    <span>Vento</span>
+                </div>
+                <div class="info-block-value">
+                    {{WeatherDatasInput.wind.speed}} km/h
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
